@@ -1,0 +1,8 @@
+package mobac.program.atlascreators;
+
+public class OSMAND extends OSMTracker {
+	public OSMAND() {
+		super();
+		tileFileNamePattern += ".tile";
+	}
+}
