@@ -46,6 +46,7 @@
  + New atlas format: OruxMaps Sqlite
  + New map source: Ordnance Survey Explorer Maps (UK)
  + Proxy authentication by user name/password added in GUI  
+ + New atlas format: OSMAND
 
  1.7: (2010-02-05)
  ~ Project has been renamed to "Mobile Atlas Creator" taking account that
